@startuml

title __PRIMITIVES's Class Diagram__\n

  namespace com.apetrei.engine {
    namespace physics {
      namespace primitives {
        class com.apetrei.engine.physics.primitives.Ray2D {
            + Ray2D()
            + getDirection()
            + getOrigin()
        }
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics {
      namespace primitives {
        class com.apetrei.engine.physics.primitives.RaycastResult {
            - hit : boolean
            - t : float
            + RaycastResult()
            + init()
            {static} + reset()
        }
      }
    }
  }
  

  com.apetrei.engine.physics.primitives.Ray2D o-- com.apetrei.misc.Vector2 : direction
  com.apetrei.engine.physics.primitives.Ray2D o-- com.apetrei.misc.Vector2 : origin
  com.apetrei.engine.physics.primitives.RaycastResult o-- com.apetrei.misc.Vector2 : normal
  com.apetrei.engine.physics.primitives.RaycastResult o-- com.apetrei.misc.Vector2 : point


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
